--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "coffee-script": "~1.6.3",
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "newrelic": "~1.3.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
